@@ -1,10 +1,17 @@
+Tue Nov 21 18:54:14 2000  Pradeep Gore  <pradeep@cs.wustl.edu>
+
+	* apps/drwho/CM_Client.cpp:
+	  
+	  Explicitly cast Comm_Manager::sokfd_ to int in calls to
+	  ACE_OS::recvfrom and ACE_OS::closesocket to quiet LynxOS.
+
 Tue Nov 21 17:42:36 2000  Pradeep Gore  <pradeep@cs.wustl.edu>
 
 	* ace/IPC_SAP.cpp: 
 
-	Modified ACE_IPC_SAP::disable to call ::WSAEventSelect on Win32. 
-	Thanks to Chris Uzdavinis <chris@atdesk.com> for contributing
-	these changes.
+	  Modified ACE_IPC_SAP::disable to call ::WSAEventSelect on Win32. 
+	  Thanks to Chris Uzdavinis <chris@atdesk.com> for contributing
+	  these changes.
 
 Tue Nov 21 11:00:14 2000  Darrell Brunsch <brunsch@uci.edu>
 
